[gd_scene load_steps=6 format=3 uid="uid://drhdukpy3ob3a"]

[ext_resource type="Script" path="res://Nodes/box.gd" id="1_ksr2r"]
[ext_resource type="Texture2D" uid="uid://dynyrxcrp8dwi" path="res://platformer_tiles.png" id="1_v8obd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8sex"]
size = Vector2(32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_h437c"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6ft3"]
size = Vector2(64, 64)

[node name="Area2D" type="Area2D" groups=["boxArea"]]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_ksr2r")

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
texture_filter = 3
scale = Vector2(2, 2)
texture = ExtResource("1_v8obd")
region_enabled = true
region_rect = Rect2(112, 64, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("RectangleShape2D_c8sex")
debug_color = Color(0.690196, 0.498039, 0, 0.419608)

[node name="Label" type="Label" parent="RigidBody2D"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_h437c")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n6ft3")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
